@@ -1,3 +1,9 @@
+2009-03-09  Gian Mario Tagliaretti  <gianmt@gnome.org>
+
+	Bug 574640 – gtk.FileChooserButton "file-set" signal is not documented
+
+	* pygtk-gtkfilechooserbutton.xml: Add "file-set" signal.
+
 2009-03-07  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
 	* pygtk-gdk-functions.xml:
